--- a/client/app/dashboard/around.you.html
+++ b/client/app/dashboard/around.you.html
@@ -25,8 +25,8 @@
             <h4 class="media-heading user-name" style="text-align: center">
               {{around.firstname}} {{around.lastname[0] | uppercase}}.
             </h4>
-            <p ng-show="around.usereducationUsers[0].educationCenterName" style="text-align: center">{{around.usereducationUsers[0].educationCenterName}}</p>
-            <p ng-hide="around.usereducationUsers[0].educationCenterName" style="text-align: center">No university entered</p>
+            <p ng-show="around.usereducationUsers[0].relatedUniversityId.shortName" style="text-align: center">{{around.usereducationUsers[0].relatedUniversityId.shortName}}</p>
+            <p ng-hide="around.usereducationUsers[0].relatedUniversityId.shortName" style="text-align: center">No university entered</p>
             <div class="info">
               <strong class="value">
                 Interested In:
