Around You style changes, email address changes, Room and looking grid changes

--- a/client/app/aroundYou/around.you.html
+++ b/client/app/aroundYou/around.you.html
@@ -91,7 +91,7 @@
                     <img ng-if="arYou.profileImage" ng-src="api/images{{arYou.profileImage}}" class="img-circle center-block looking-grid-profile-img">
                     <i ng-if="!arYou.profileImage" class="fa fa-user fa-4x" style="text-align: center; display: inline-block;width: 100%;"></i>
                   </div>
-                  <div class="">
+                  <div class="arYouView">
                     <h4 class="media-heading user-name" style="text-align: center;">
                       {{arYou.firstname}} {{arYou.lastname[0] | uppercase}}.
                     </h4>
