--- a/client/app/dashboard/looking/looking-details/profile.section.html
+++ b/client/app/dashboard/looking/looking-details/profile.section.html
@@ -63,14 +63,14 @@
   <hr/>
   <div class="row">
     <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12" >
-      <a id="email" style="margin-left:20px" class="contact-bubble-email pull-right" ng-href="mailto:{{detail.lookingDetail.relatedUserId.email}}?Subject=Interested%20in%20your%20looking">
-        <i class="fa fa-send fa-lg"></i><p>Email</p></a>
+      <a id="email" style="margin-left:20px; position: relative;" class="pull-right" ng-href="mailto:{{detail.lookingDetail.relatedUserId.email}}?Subject=Interested%20in%20your%20looking">
+        <i class="fa fa-send contact-bubble-email"></i><p style="float: right; padding-top: 10px">&nbsp;&nbsp;{{detail.lookingDetail.relatedUserId.email}}</p></a>
       <script type="text/javascript">
         mixpanel.track_links("#email", "Email sent - looking");
         mixpanel.people.increment('Email sent - looking');
       </script>
-      <a id="facebookPM" style="margin-left:20px" ng-if="detail.lookingDetail.relatedUserId.facebook" class="contact-bubble-facebook pull-right" ng-href="{{detail.lookingDetail.relatedUserId.facebook}}" target="_blank">
-        <i style="color: #ffffff" class="fa fa-facebook fa-lg"></i><p style="color: white">PM</p></a>
+      <a id="facebookPM" style="margin-left:20px; position: relative;" ng-if="detail.lookingDetail.relatedUserId.facebook" class="pull-right" ng-href="{{detail.lookingDetail.relatedUserId.facebook}}" target="_blank">
+        <i style="color: #ffffff" class="fa fa-facebook contact-bubble-facebook"></i><p style="float: right; padding-top: 10px">&nbsp;&nbsp;PM</p></a>
       <script type="text/javascript" ng-if="detail.lookingDetail.relatedUserId.facebook">
         mixpanel.track_links("#facebookPM", "Facebook PM sent - looking");
         mixpanel.people.increment('Facebook PM sent - available room');
