--- a/client/app/aroundYou/around.you.html
+++ b/client/app/aroundYou/around.you.html
@@ -86,7 +86,7 @@
           <slick dots="true" class="slider" init-onload="true" data="around.groups" slides-to-show="1" slides-to-scroll="1" ng-if="around.me.shareProfile && around.aroundYou.length">
             <div ng-repeat="group in around.groups" class="row">
               <div class="col-xs-12 col-sm-6 col-md-3 col-lg-3 room" ng-repeat="arYou in group">
-                <div class="front white-box">
+                <div class="front white-box" style="min-height: 345px">
                   <div class="center-image">
                     <img ng-if="arYou.profileImage" ng-src="api/images{{arYou.profileImage}}" class="img-circle center-block looking-grid-profile-img">
                     <i ng-if="!arYou.profileImage" class="fa fa-user fa-4x" style="text-align: center; display: inline-block;width: 100%;"></i>
@@ -97,20 +97,24 @@
                     </h4>
                     <p ng-show="arYou.usereducationUsers[0].relatedUniversityId.shortName" style="text-align: center">{{arYou.usereducationUsers[0].relatedUniversityId.shortName}}</p>
                     <p ng-hide="arYou.usereducationUsers[0].relatedUniversityId.shortName" style="text-align: center">No university entered</p>
-                    <div class="info">
+                    <div class="info" style="margin-left:28%">
                       <strong class="value">
                         Interested In:
                       </strong>
                       <br>
                     </div>
-                    <ul class="specs">
+
+                  <div style="margin-left:20%">
+                    <ul class="specs" style="min-height: 100px; text-align: left">
                       <li ng-show="arYou.userstatusesUsers[0].carpoolingForGroceries || arYou.userstatusesUsers[0].carpoolingToCampus
                         || arYou.userstatusesUsers[0].carpoolingFromCampus || arYou.userstatusesUsers[0].carpoolingForRoadtrip
                         || arYou.userstatusesUsers[0].carpoolingSplit"><i class="fa fa-car"></i>&nbsp;&nbsp;Carpooling</li>
-                      <li ng-show="arYou.userstatusesUsers[0].walkingToCampus || arYou.userstatusesUsers[0].walkingFromCampus"><i class="fa fa-child"></i>&nbsp;&nbsp;&nbsp;Walking</li>
+                      <li ng-show="arYou.userstatusesUsers[0].walkingToCampus || arYou.userstatusesUsers[0].walkingFromCampus"><i class="fa fa-child"></i>&nbsp;&nbsp;&nbsp;&nbsp;Walking</li>
                       <li ng-show="arYou.userstatusesUsers[0].meetForHangout || arYou.userstatusesUsers[0].meetForStudy
                         || arYou.userstatusesUsers[0].meetForEvents"><i class="fa fa-users"></i>&nbsp;&nbsp;Meeting Up</li>
                     </ul>
+                  </div>
+
                     <div style="text-align: center; display: inline-block;width: 100%; padding-top: 10px">
                       <a id="facebookPM" ng-href="{{arYou.facebook}}" ng-if="arYou.facebook" target="_blank"><i class="fa fa-facebook-square fa-2x facebookAroundYou"></i></a>
                       <script type="text/javascript" ng-if="arYou.facebook">
