--- a/client/app/aroundYou/around.you.html
+++ b/client/app/aroundYou/around.you.html
@@ -106,12 +106,15 @@
 
                   <div style="margin-left:20%">
                     <ul class="specs" style="min-height: 100px; text-align: left">
-                      <li ng-show="arYou.userstatusesUsers[0].carpoolingForGroceries || arYou.userstatusesUsers[0].carpoolingToCampus
-                        || arYou.userstatusesUsers[0].carpoolingFromCampus || arYou.userstatusesUsers[0].carpoolingForRoadtrip
-                        || arYou.userstatusesUsers[0].carpoolingSplit"><i class="fa fa-car"></i>&nbsp;&nbsp;Carpooling</li>
-                      <li ng-show="arYou.userstatusesUsers[0].walkingToCampus || arYou.userstatusesUsers[0].walkingFromCampus"><i class="fa fa-child"></i>&nbsp;&nbsp;&nbsp;&nbsp;Walking</li>
-                      <li ng-show="arYou.userstatusesUsers[0].meetForHangout || arYou.userstatusesUsers[0].meetForStudy
-                        || arYou.userstatusesUsers[0].meetForEvents"><i class="fa fa-users"></i>&nbsp;&nbsp;Meeting Up</li>
+                      <li ng-class="{'interested':(arYou.userstatusesUsers[0].carpoolingForGroceries || arYou.userstatusesUsers[0].carpoolingToCampus
+                    || arYou.userstatusesUsers[0].carpoolingFromCampus || arYou.userstatusesUsers[0].carpoolingForRoadtrip
+                    || arYou.userstatusesUsers[0].carpoolingSplit), 'not-interested':!(arYou.userstatusesUsers[0].carpoolingForGroceries || arYou.userstatusesUsers[0].carpoolingToCampus
+                    || arYou.userstatusesUsers[0].carpoolingFromCampus || arYou.userstatusesUsers[0].carpoolingForRoadtrip
+                    || arYou.userstatusesUsers[0].carpoolingSplit)}"><i class="fa fa-car"></i>&nbsp;&nbsp;Carpooling</li>
+                      <li ng-class="{'interested':(arYou.userstatusesUsers[0].walkingToCampus || arYou.userstatusesUsers[0].walkingFromCampus), 'not-interested':!(arYou.userstatusesUsers[0].walkingToCampus || arYou.userstatusesUsers[0].walkingFromCampus)}"><i class="fa fa-child"></i>&nbsp;&nbsp;&nbsp;&nbsp;Walking</li>
+                      <li ng-class="{'interested':(arYou.userstatusesUsers[0].meetForHangout || arYou.userstatusesUsers[0].meetForStudy
+                    || arYou.userstatusesUsers[0].meetForEvents), 'not-interested':!(arYou.userstatusesUsers[0].meetForHangout || arYou.userstatusesUsers[0].meetForStudy
+                    || arYou.userstatusesUsers[0].meetForEvents)}"><i class="fa fa-users"></i>&nbsp;&nbsp;Meeting Up</li>
                     </ul>
                   </div>
 
