--- a/client/app/dashboard/around.you.html
+++ b/client/app/dashboard/around.you.html
@@ -34,12 +34,15 @@
               <br>
             </div>
             <ul class="specs" style="min-height: 100px; margin-left: 13%">
-              <li ng-show="around.userstatusesUsers[0].carpoolingForGroceries || around.userstatusesUsers[0].carpoolingToCampus
-                  || around.userstatusesUsers[0].carpoolingFromCampus || around.userstatusesUsers[0].carpoolingForRoadtrip
-                  || around.userstatusesUsers[0].carpoolingSplit"><i class="fa fa-car"></i>&nbsp;&nbsp;Carpooling</li>
-              <li ng-show="around.userstatusesUsers[0].walkingToCampus || around.userstatusesUsers[0].walkingFromCampus"><i class="fa fa-child"></i>&nbsp;&nbsp;&nbsp;&nbsp;Walking</li>
-              <li ng-show="around.userstatusesUsers[0].meetForHangout || around.userstatusesUsers[0].meetForStudy
-                || around.userstatusesUsers[0].meetForEvents"><i class="fa fa-users"></i>&nbsp;&nbsp;Meeting Up</li>
+              <li ng-class="{'interested':(around.userstatusesUsers[0].carpoolingForGroceries || around.userstatusesUsers[0].carpoolingToCampus
+                    || around.userstatusesUsers[0].carpoolingFromCampus || around.userstatusesUsers[0].carpoolingForRoadtrip
+                    || around.userstatusesUsers[0].carpoolingSplit), 'not-interested':!(around.userstatusesUsers[0].carpoolingForGroceries || around.userstatusesUsers[0].carpoolingToCampus
+                    || around.userstatusesUsers[0].carpoolingFromCampus || around.userstatusesUsers[0].carpoolingForRoadtrip
+                    || around.userstatusesUsers[0].carpoolingSplit)}"><i class="fa fa-car"></i>&nbsp;&nbsp;Carpooling</li>
+              <li ng-class="{'interested':(around.userstatusesUsers[0].walkingToCampus || around.userstatusesUsers[0].walkingFromCampus), 'not-interested':!(around.userstatusesUsers[0].walkingToCampus || around.userstatusesUsers[0].walkingFromCampus)}"><i class="fa fa-child"></i>&nbsp;&nbsp;&nbsp;&nbsp;Walking</li>
+              <li ng-class="{'interested':(around.userstatusesUsers[0].meetForHangout || around.userstatusesUsers[0].meetForStudy
+                    || around.userstatusesUsers[0].meetForEvents), 'not-interested':!(around.userstatusesUsers[0].meetForHangout || around.userstatusesUsers[0].meetForStudy
+                    || around.userstatusesUsers[0].meetForEvents)}"><i class="fa fa-users"></i>&nbsp;&nbsp;Meeting Up</li>
             </ul>
           </div>
           <div style="text-align: center;width: 100%; padding-top: 10px">
