--- a/client/app/rooms/rooms.html
+++ b/client/app/rooms/rooms.html
@@ -27,7 +27,6 @@
           <button style="margin-top: 5px" class="btn-rented-small reset" id="search" name="search" ng-click="rooms.clearSearchAndSearch(false)">Reset</button>
           <div ng-include=" 'app/rooms/searchCriteria.html' "></div>
         </div>
-
         <!-- Sort -->
 
         <div class="col-xs-12 col-sm-7 col-md-7 col-lg-7 col-sm-offset-1 col-md-offset-1 col-lg-offset-1 sortBox" ng-show="!rooms.showSearch">
@@ -50,8 +49,8 @@
       <!-- Main room view -->
 
       <div class="row">
-
-        <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+        <h3 ng-if="!rooms.education.universityId">Please set your <a ui-sref="editProfile({focus:'updateEducation'})">university</a> to see available rooms around</h3>
+        <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12" ng-if="rooms.education.universityId">
           <slick dots="true" class="slider" init-onload="true" data="rooms.groups" slides-to-show="1" slides-to-scroll="1" >
             <div ng-repeat="group in rooms.groups" class="row">
               <!--ng-if="room.roomDetails.creatorId!==rooms.me.id" to not show own user room listings-->
