--- a/client/app/dashboard/looking/looking-details/profile.section.html
+++ b/client/app/dashboard/looking/looking-details/profile.section.html
@@ -1,4 +1,7 @@
-<h2>{{detail.lookingDetail.relatedUserId.firstname}}'s profile</h2>
+<span ng-click="detail.previous()" ng-hide="currentRoom==0" class="previousArrow"><i class="fa fa-arrow-left previousArrow">&nbsp;&nbsp;Previous</i></span>
+<span ng-click="detail.next()" ng-hide="currentRoom==(detail.allIds.length-1)" class="nextArrow">Next&nbsp;&nbsp;<i class="fa fa-arrow-right nextArrow"></i></span>
+
+<h2 style="clear:both; padding-top:20px">{{detail.lookingDetail.relatedUserId.firstname}}'s profile</h2>
 
 <!-- Info about the user -->
 
