--- a/client/app/dashboard/looking/looking.html
+++ b/client/app/dashboard/looking/looking.html
@@ -7,7 +7,7 @@
         <h2>Students Looking</h2>
       </div>
     </div>
-      <div class="row searchAndSortBox">
+      <div class="row searchAndSortBox" ng-if="looking.education.universityId">
 
         <!-- Search -->
 
@@ -40,7 +40,9 @@
         </div>
       </div> <!-- end search and sort -->
     <div class="row">
-      <h3 ng-if="!looking.education.universityId">Please set your <a ui-sref="editProfile({focus:'updateEducation'})">university</a> to see students looking</h3>
+      <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12" ng-if="!looking.education.universityId">
+        <h3>Please set your <a ui-sref="editProfile({focus:'updateEducation'})">university</a> to see available rooms around</h3>
+      </div>
       <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
       <slick dots="true" class="slider" init-onload="true" data="looking.groups" slides-to-show="1" slides-to-scroll="1" ng-if="looking.lookings.length && looking.education.universityId">
         <!--ng-if="look.relatedUserId.id!==looking.me.id" dont use temporary (splicing them on backed)-->
