Mixpanel for tracking user clicks on current status. Changed Open Search to Search and Close Search to Close

--- a/client/app/aroundYou/around.you.html
+++ b/client/app/aroundYou/around.you.html
@@ -20,12 +20,12 @@
 
         <!-- search buttons -->
         <div class="col-xs-12 col-sm-4 col-md-4 col-lg-4" ng-show="!around.showSearch">
-          <button class="btn-rented-medium secondary" ng-click="around.showSearch=!around.showSearch" ng-show="!around.showSearch"><i style="color: #ffffff" class="fa fa-search-plus fa-lg"></i>&nbsp;&nbsp;Open Search</button>
-          <button class="btn-rented-medium secondary" ng-click="around.showSearch=!around.showSearch" ng-show="around.showSearch"><i style="color: #ffffff" class="fa fa-search-plus fa-lg"></i>&nbsp;&nbsp;Close Search</button>
+          <button class="btn-rented-medium secondary" ng-click="around.showSearch=!around.showSearch" ng-show="!around.showSearch"><i style="color: #ffffff" class="fa fa-search-plus fa-lg"></i>&nbsp;&nbsp;Search</button>
+          <button class="btn-rented-medium secondary" ng-click="around.showSearch=!around.showSearch" ng-show="around.showSearch"><i style="color: #ffffff" class="fa fa-search-plus fa-lg"></i>&nbsp;&nbsp;Close</button>
         </div>
         <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12" ng-show="around.showSearch">
-          <button class="btn-rented-medium secondary" ng-click="around.showSearch=!around.showSearch" ng-show="!around.showSearch"><i style="color: #ffffff" class="fa fa-search-plus fa-lg"></i>&nbsp;&nbsp;Open Search</button>
-          <button class="btn-rented-medium secondary" ng-click="around.showSearch=!around.showSearch" ng-show="around.showSearch"><i style="color: #ffffff" class="fa fa-search-plus fa-lg"></i>&nbsp;&nbsp;Close Search</button>
+          <button class="btn-rented-medium secondary" ng-click="around.showSearch=!around.showSearch" ng-show="!around.showSearch"><i style="color: #ffffff" class="fa fa-search-plus fa-lg"></i>&nbsp;&nbsp;Search</button>
+          <button class="btn-rented-medium secondary" ng-click="around.showSearch=!around.showSearch" ng-show="around.showSearch"><i style="color: #ffffff" class="fa fa-search-plus fa-lg"></i>&nbsp;&nbsp;Close</button>
         </div>
         <!-- end of search buttons -->
 
