--- a/client/app/rooms/rooms.html
+++ b/client/app/rooms/rooms.html
@@ -17,13 +17,13 @@
         <!-- Search -->
 
         <div class="col-xs-12 col-sm-4 col-md-4 col-lg-4" ng-show="!rooms.showSearch">
-          <button class="btn-rented-medium secondary" ng-click="rooms.showSearch=!rooms.showSearch" ng-show="!rooms.showSearch"><i style="color: #ffffff" class="fa fa-search-plus fa-lg"></i>&nbsp;&nbsp;Open Search</button>
-          <button class="btn-rented-medium secondary" ng-click="rooms.showSearch=!rooms.showSearch" ng-show="rooms.showSearch"><i style="color: #ffffff" class="fa fa-search-plus fa-lg"></i>&nbsp;&nbsp;Close Search</button>
+          <button class="btn-rented-medium secondary" ng-click="rooms.showSearch=!rooms.showSearch" ng-show="!rooms.showSearch"><i style="color: #ffffff" class="fa fa-search-plus fa-lg"></i>&nbsp;&nbsp;Search</button>
+          <button class="btn-rented-medium secondary" ng-click="rooms.showSearch=!rooms.showSearch" ng-show="rooms.showSearch"><i style="color: #ffffff" class="fa fa-search-plus fa-lg"></i>&nbsp;&nbsp;Close</button>
           <button style="margin-top: 5px" class="btn-rented-small reset" id="search" name="search" ng-click="rooms.clearSearchAndSearch(false)">Reset</button>
         </div>
         <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12" ng-show="rooms.showSearch">
-          <button class="btn-rented-medium secondary" ng-click="rooms.showSearch=!rooms.showSearch" ng-show="!rooms.showSearch"><i style="color: #ffffff" class="fa fa-search-plus fa-lg"></i>&nbsp;&nbsp;Open Search</button>
-          <button class="btn-rented-medium secondary" ng-click="rooms.showSearch=!rooms.showSearch" ng-show="rooms.showSearch"><i style="color: #ffffff" class="fa fa-search-plus fa-lg"></i>&nbsp;&nbsp;Close Search</button>
+          <button class="btn-rented-medium secondary" ng-click="rooms.showSearch=!rooms.showSearch" ng-show="!rooms.showSearch"><i style="color: #ffffff" class="fa fa-search-plus fa-lg"></i>&nbsp;&nbsp;Search</button>
+          <button class="btn-rented-medium secondary" ng-click="rooms.showSearch=!rooms.showSearch" ng-show="rooms.showSearch"><i style="color: #ffffff" class="fa fa-search-plus fa-lg"></i>&nbsp;&nbsp;Close</button>
           <button style="margin-top: 5px" class="btn-rented-small reset" id="search" name="search" ng-click="rooms.clearSearchAndSearch(false)">Reset</button>
           <div ng-include=" 'app/rooms/searchCriteria.html' "></div>
         </div>
